yamls/Deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: exercise
  namespace: rick-and-morty
  labels:
    app: "exercise"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "exercise"
  template:
    metadata:
      labels:
        app: "exercise"
    spec:
      containers:
      - image: exercise:latest
        name: api
        ports:
          - containerPort: 8080
      terminationGracePeriodSeconds: 10
