yamls/Service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: exercise-service
  namespace: rick-and-morty
spec:
  type: NodePort
  selector:
    rick-and-morty: "is-cool"
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      name: http
