yamls/Ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: exercise-ingress
  namespace: rick-and-morty
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  rules:
    - host: rickandmorty.exercise
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              serviceName: exercise-service
              servicePort: http
